feat: rename project to cafi
Co-authored-by: juwitte <juwi93@gmx.de>
Co-authored-by: artdotlis <artdotlis@pm.me>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,7 +31,7 @@
     "../docker-compose.yml",
     "dev.docker-compose.yml"
   ],
-  "name": "knacr",
+  "name": "cafi",
   "postAttachCommand": "make dev",
   "remoteUser": "devu",
   "runServices": [
