--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,51 @@
 [project]
 name = "cafi"
 version = "0.8.0"
-description = """This project acts as a registry for \
-acronyms used by culture collections."""
+description = "This project acts as a registry for acronyms used by culture collections."
 readme = "README.md"
 authors = [{ name = "Artur Lissin", email = "artur.lissin@dsmz.de" }]
 license = "MIT"
 keywords = ["python", "data", "culture collection", "acronym"]
-repository = "https://github.com/LeibnizDSMZ/cafi"
 requires-python = ">=3.13,<4"
-dependencies = ["pydantic >=2.10,<3", "requests >=2.32,<3"]
+
+dependencies = [
+  "pydantic ==2.11.9",
+  "requests ==2.32.5"
+]
 
 [project.scripts]
 acr_db = "cafi.main:run"
 
+[tool.uv]
+package = true
+default-groups = []
+
 [build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
+requires = ["uv_build>=0.8.22,<0.9.0"]
+build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+  "commitizen ==4.9.1",
+  "mypy ==1.18.2",
+  "ruff ==0.13.1",
+  "black ==25.9.0",
+  "codespell ==2.4.1",
+  "shellcheck-py ==0.11.0.1",
+  "pre-commit-hooks ==6.0.0",
+  "vulture ==2.14",
+  # commit hooks
+  "lefthook ==1.13.3",
+  # types
+  "types-requests ==2.32.4.20250913",
+]
+test = ["coverage ==7.10.7", "pytest ==8.4.2", "tox ==4.30.2"]
+docs = [
+  "mkdocs ==1.6.1",
+  "mkdocs-material ==9.6.20",
+  "mkdocstrings ==0.30.1",
+  "mkdocstrings-python ==1.18.2",
+]
 
 [tool.black]
 line-length = 90
@@ -37,7 +66,7 @@ version_files = [
   "README.md:^\\[!\\[release:",
   "src/cafi/constants/versions.py:^CURRENT_VER",
 ]
-version_provider = "pep621"
+version_provider = "uv"
 version_type = "semver"
 
 [tool.mypy]
@@ -57,7 +86,13 @@ disallow_subclassing_any = false
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
 disallow_untyped_defs = true
-exclude = ["__pycache__", "\\.tox", "\\.mypy_cache", "venv"]
+exclude = [
+  "__pycache__",
+  "\\.tox/.*",
+  "\\.mypy_cache/.*",
+  "\\.venv/.*",
+  "configs/.*",
+]
 ignore_missing_imports = true
 implicit_reexport = true
 local_partial_types = true
@@ -73,47 +108,6 @@ warn_redundant_casts = true
 warn_return_any = true
 warn_unreachable = true
 warn_unused_ignores = true
-
-[tool.poetry]
-include = ["src/cafi/data/*", "src/cafi/py.typed"]
-packages = [{ include = "cafi", from = "src" }]
-
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-commitizen = ">=4.1,<5"
-mypy = ">=1.14,<2"
-ruff = ">=0.9,<1"
-black = ">=24.10,<25"
-codespell = ">=2.3,<3"
-shellcheck-py = ">=0.10,<1"
-pre-commit-hooks = ">=5.0,<6"
-# commit hooks
-lefthook = ">=1.10,<2"
-# types
-types-requests = ">=2.32,<3"
-
-[tool.poetry.group.docs]
-optional = true
-
-[tool.poetry.group.docs.dependencies]
-mkdocs = ">=1.6,<2"
-mkdocs-material = ">=9.5,<10"
-mkdocstrings = ">=0.27,<1"
-mkdocstrings-python = ">=1.13,<2"
-
-[tool.poetry.group.test]
-optional = true
-
-[tool.poetry.group.test.dependencies]
-coverage = ">= 7.6,<8"
-pytest = ">=8.3,<9"
-tox = ">=4.23,<5"
-
-[tool.poetry.requires-plugins]
-poetry-plugin-export = ">=1.9"
-poetry-plugin-shell = ">=1.0"
 
 [tool.ruff]
 line-length = 90
@@ -222,9 +216,17 @@ commands = [
 ]
 
 [tool.coverage.run]
-source = ["cafi"]
+source = ["src"]
 parallel = true
 
 [tool.coverage.report]
 show_missing = false
 fail_under = 50
+
+[tool.vulture]
+paths = ["configs/dev/whitelist.py", "src"]
+ignore_decorators = ["@*"]
+make_whitelist = true
+min_confidence = 60
+sort_by_size = true
+verbose = false
