--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,7 @@ license = "MIT"
 keywords = ["python", "data", "culture collection", "acronym"]
 requires-python = ">=3.13,<4"
 
-dependencies = [
-  "pydantic ==2.11.9",
-  "requests ==2.32.5"
-]
+dependencies = ["pydantic ==2.11.9", "requests ==2.32.5"]
 
 [project.scripts]
 acr_db = "cafi.main:run"
@@ -181,18 +178,32 @@ fixable = [
   "UP",
   "YTT",
 ]
-ignore = ["TRY003", "N818"]
-select = ["E", "F", "B", "C90", "S", "PT", "ARG", "PTH", "TRY", "RUF", "N"]
+ignore = [
+  "TRY003",
+  "N818",
+  "D100",
+  "D101",
+  "D102",
+  "D103",
+  "D104",
+  "D105",
+  "D106",
+  "D107",
+]
+select = ["E", "F", "B", "C90", "S", "PT", "ARG", "PTH", "TRY", "RUF", "N", "D"]
 unfixable = []
+
+[tool.ruff.per-file-ignores]
+"tests/**/*.py" = ["S101"]
 
 [tool.ruff.lint.mccabe]
 max-complexity = 11
 
-[tool.ruff.lint.per-file-ignores]
-"**/tests/*" = ["S101"]
-
 [tool.ruff.lint.pylint]
 max-args = 8
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.tox]
 requires = ["tox>=4.23"]
